# bruteforcefrac

./: CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt  mwe-list.cpp  mwe-tree.cpp  mwe-vector.cpp  mwe.cpp
include/: IntFactor.h  IntFactorVector.h  PrimeFactorFinder.h  RationalNum.h  bruteforcefrac.h
include/IntFactorList/: IntFactorList.h  IntFactorListNode.h
include/IntFactorTree/: IntFactorTree.h  IntFactorTreeNode.h
tests/: CMakeLists.txt  test_all_include.h  test_intfactorvector.cpp  test_rationalnum.cpp
